tests/NormalTests/paczka1/small_fuzzy/29782011.err
Error in line 3: zPd A760 97,0
Error in line 7: zPd S447 67,4
Error in line 9: A431 A431 8,7
Error in line 10: A431 S447 30,6
Error in line 1: Jqh A431 11,6
